--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "external/malloc_count"]
 	path = external/malloc_count
 	url = git@github.com:ByteHamster-etc/malloc_count.git
+[submodule "external/libsais"]
+	path = external/libsais
+	url = https://github.com/IlyaGrebnov/libsais
