build only rlzsa for random access

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,7 +27,7 @@ link_directories("~/lib")
 message("Building in ${CMAKE_BUILD_TYPE} mode")
 
 set(CMAKE_CXX_FLAGS_DEBUG "-O0 -ggdb -g")
-set(CMAKE_CXX_FLAGS_RELEASE "-Ofast -fstrict-aliasing -DNDEBUG")
+set(CMAKE_CXX_FLAGS_RELEASE "-Ofast -ggdb -fstrict-aliasing -DNDEBUG")
 set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "-g -ggdb -Ofast -fstrict-aliasing")
 
 # ips4o
@@ -53,6 +53,15 @@ TARGET_LINK_LIBRARIES(ri-build unordered_dense)
 TARGET_LINK_LIBRARIES(ri-build libsais)
 TARGET_LINK_LIBRARIES(ri-build malloc_count)
 
+add_executable(rlzsa-build rlzsa-build.cpp)
+TARGET_LINK_LIBRARIES(rlzsa-build sdsl)
+TARGET_LINK_LIBRARIES(rlzsa-build divsufsort)
+TARGET_LINK_LIBRARIES(rlzsa-build divsufsort64)
+TARGET_LINK_LIBRARIES(rlzsa-build ips4o)
+TARGET_LINK_LIBRARIES(rlzsa-build unordered_dense)
+TARGET_LINK_LIBRARIES(rlzsa-build libsais)
+TARGET_LINK_LIBRARIES(rlzsa-build malloc_count)
+
 add_executable(ri-locate ri-locate.cpp)
 TARGET_LINK_LIBRARIES(ri-locate sdsl)
 TARGET_LINK_LIBRARIES(ri-locate divsufsort)
@@ -71,20 +80,3 @@ TARGET_LINK_LIBRARIES(ri-count malloc_count)
 #TARGET_LINK_LIBRARIES(ri-space sdsl)
 #TARGET_LINK_LIBRARIES(ri-space divsufsort)
 #TARGET_LINK_LIBRARIES(ri-space divsufsort64)
-
-enable_testing()
-include(GoogleTest)
-include(Dart)
-
-add_executable(test "${CMAKE_SOURCE_DIR}/tests/test.cpp")
-
-TARGET_LINK_LIBRARIES(test sdsl)
-TARGET_LINK_LIBRARIES(test divsufsort)
-TARGET_LINK_LIBRARIES(test divsufsort64)
-TARGET_LINK_LIBRARIES(test libsais)
-TARGET_LINK_LIBRARIES(test gtest_main)
-TARGET_LINK_LIBRARIES(test malloc_count)
-
-set_target_properties(test PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/tests/")
-
-gtest_discover_tests(test)
