separate executable for measuring random access times

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,15 +44,6 @@ add_subdirectory("${CMAKE_SOURCE_DIR}/external/libsais/")
 include_directories("${CMAKE_SOURCE_DIR}/external/ips4o/include/")
 include_directories("${CMAKE_SOURCE_DIR}/external/unordered_dense/include/")
 
-add_executable(ri-build ri-build.cpp)
-TARGET_LINK_LIBRARIES(ri-build sdsl)
-TARGET_LINK_LIBRARIES(ri-build divsufsort)
-TARGET_LINK_LIBRARIES(ri-build divsufsort64)
-TARGET_LINK_LIBRARIES(ri-build ips4o)
-TARGET_LINK_LIBRARIES(ri-build unordered_dense)
-TARGET_LINK_LIBRARIES(ri-build libsais)
-TARGET_LINK_LIBRARIES(ri-build malloc_count)
-
 add_executable(rlzsa-build rlzsa-build.cpp)
 TARGET_LINK_LIBRARIES(rlzsa-build sdsl)
 TARGET_LINK_LIBRARIES(rlzsa-build divsufsort)
@@ -62,21 +53,11 @@ TARGET_LINK_LIBRARIES(rlzsa-build unordered_dense)
 TARGET_LINK_LIBRARIES(rlzsa-build libsais)
 TARGET_LINK_LIBRARIES(rlzsa-build malloc_count)
 
-add_executable(ri-locate ri-locate.cpp)
-TARGET_LINK_LIBRARIES(ri-locate sdsl)
-TARGET_LINK_LIBRARIES(ri-locate divsufsort)
-TARGET_LINK_LIBRARIES(ri-locate divsufsort64)
-TARGET_LINK_LIBRARIES(ri-locate libsais)
-TARGET_LINK_LIBRARIES(ri-locate malloc_count)
-
-add_executable(ri-count ri-count.cpp)
-TARGET_LINK_LIBRARIES(ri-count sdsl)
-TARGET_LINK_LIBRARIES(ri-count divsufsort)
-TARGET_LINK_LIBRARIES(ri-count divsufsort64)
-TARGET_LINK_LIBRARIES(ri-count libsais)
-TARGET_LINK_LIBRARIES(ri-count malloc_count)
-
-#add_executable(ri-space ri-space.cpp)
-#TARGET_LINK_LIBRARIES(ri-space sdsl)
-#TARGET_LINK_LIBRARIES(ri-space divsufsort)
-#TARGET_LINK_LIBRARIES(ri-space divsufsort64)
+add_executable(rlzsa-ra rlzsa-random-access.cpp)
+TARGET_LINK_LIBRARIES(rlzsa-ra sdsl)
+TARGET_LINK_LIBRARIES(rlzsa-ra divsufsort)
+TARGET_LINK_LIBRARIES(rlzsa-ra divsufsort64)
+TARGET_LINK_LIBRARIES(rlzsa-ra ips4o)
+TARGET_LINK_LIBRARIES(rlzsa-ra unordered_dense)
+TARGET_LINK_LIBRARIES(rlzsa-ra libsais)
+TARGET_LINK_LIBRARIES(rlzsa-ra malloc_count)
